Fix help text to remove scroll bar on overflow on desktop size

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -476,6 +476,10 @@ footer {
         align-items: center;
     }
 
+    .help-box p {
+        overflow: auto;
+    }
+
     .playing-container {
         height: 80%;
         width: 50%;
